--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
 <!-- Un input para cargar imágenes -->
 <input type="file" multiple accept="image/*" (change)="uploadImage($event)">
 
-<button type="button" (click)="eliminarImagen()">Presiona</button>
+<button type="button" (click)="eliminarImagen()">Elimina</button>
 
 <!-- Imprimir las imágenes -->
 <div class="images">
